Fix up alignment of Layer Switcher

--- a/webappbuilder/themes/basic/app.css
+++ b/webappbuilder/themes/basic/app.css
@@ -2,6 +2,12 @@
   width: 100%;
   height: 100%;
 }
+.layerlistbutton {
+  top: 50px;
+}
+.layer-switcher {
+  top: 6em !important;
+}
 #globe-button {
   top: .5em;
   left: 2.5em;
